<resources>
    <string name="app_name">MyApp</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logo_desc">App Logo</string>
    <string name="college_year_hint">College Year</string>
    <string name="hostel_name_hint">Hostel Name</string>
    <string name="branch_hint">Branch</string>
    <string name="profile_picture_desc">Profile Picture</string>
     <string name="loading">Loading...</string>
    <string name="loading_price">Loading Price...</string>

</resources>
